--- a/gb/19/11/13/n11651738.md
+++ b/gb/19/11/13/n11651738.md
@@ -1,61 +1,63 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ssuoew2898/djy/blob/master/gb/nsc413.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/1.jpg" title="´ó¼ÍÔª"></a><a href="https://github.com/ssuoew2898/djy/blob/master/gb/n24hr.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/3.jpg" title="¹ú¼ÊÐÂÎÅ"></a><a href="https://github.com/ssuoew2898/djy/blob/master/gb/nsc413.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/4.jpg" title="´óÂ½ÐÂÎÅ"></a><a href="https://github.com/ssuoew2898/djy/blob/master/gb/news392.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/5.jpg" title="ÆÀÂÛ"></a><a href="https://github.com/ssuoew2898/djy/blob/master/gb/news2007.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/6.jpg" title="ÎÄ»¯"></a><a href="https://github.com/ssuoew2898/djy/blob/master/gb/news2008.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/7.jpg" title="Éú»î"></a><a href="https://github.com/ssuoew2898/djy/blob/master/gb/ncyule.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/8.jpg" title="ÓéÀÖ"></a><a href="https://github.com/ssuoew2898/djy/blob/master/gb/nsc1002.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/9.jpg" title="½¡¿µ"><a href="https://www.youlucky.com"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/10.jpg" title="¹ºÎï"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/12.jpg" title="¾è¿î"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ssuoew2898/djy/blob/master/gb/9p.md#1">ÉçÂÛ</a> | <a target="_blank" href="https://github.com/ssuoew2898/djy/blob/master/gb/nf5657.md#1">ÈýÍË</a> | <a target="_blank" href="https://github.com/ssuoew2898/djy/blob/master/gb/nf6123.md#1">Ëß½­</a> | <a target="_blank" href="https://github.com/ssuoew2898/djy/blob/master/gb/nf1176117.md#1">ÖÐ¹²Âô¹ú</a> | <a target="_blank" href="https://github.com/ssuoew2898/djy/blob/master/gb/nf5773.md#1">Ì°¸¯ÒùÂÒ | <a target="_blank" href="https://github.com/ssuoew2898/djy/blob/master/gb/nf1176115.md#1">´Ü¸ÄÀúÊ·</a> | <a target="_blank" href="https://github.com/ssuoew2898/djy/blob/master/gb/nf1176107.md#1">µ³¿ý»­Æ¤</a> | <a target="_blank" href="https://github.com/ssuoew2898/djy/blob/master/gb/nf1320400.md#1">ÖÐ¹²¼äµý</a> | <a target="_blank" href="https://github.com/ssuoew2898/djy/blob/master/gb/nf1176114.md#1">ÆÆ»µ´«Í³</a> | <a target="_blank" href="https://github.com/ssuoew2898/djy/blob/master/gb/nf5287.md#1">¶ñ¹áÂúÓ¯</a> | <a target="_blank" href="https://github.com/ssuoew2898/djy/blob/master/gb/ncid278.md#1">ÈËÈ¨</a> | <a target="_blank" href="https://github.com/ssuoew2898/djy/blob/master/gb/nf1176111.md#1">ÆÈº¦</a> | <a target="_blank" href="https://github.com/ssuoew2898/djy/blob/master/gb/nf1235328.md#1">Êé¼®</a> | <a target="_blank" href="https://github.com/ssuoew2898/www/blob/master/README.md?zsrh#1">·­Ç½</a></p><p><a target="_blank" href="https://github.com/ssuoew2898/djy/blob/master/gb/nf5562.md#1">Î±»ð</a> | <a target="_blank" href="https://github.com/ssuoew2898/djy/blob/master/gb/nf4378.md#1">ÎÊ´ð</a> | <a target="_blank" href="https://github.com/ssuoew2898/djy/blob/master/gb/nf5792.md#1">ÆÊÎö</a> | <a target="_blank" href="https://github.com/ssuoew2898/djy/blob/master/gb/nf5735.md#1">Á½°¶±È¶Ô</a> | <a target="_blank" href="https://github.com/ssuoew2898/djy/blob/master/gb/nf6119.md#1">¸÷¹ú°ý½±</a> | <a target="_blank" href="https://github.com/ssuoew2898/djy/blob/master/gb/nf6120.md#1">ÃñÖÚÉùÔ®</a> | <a target="_blank" href="https://github.com/ssuoew2898/djy/blob/master/gb/nf1188594.md#1">ÄÑÍü¼ÇÒä</a> | <a target="_blank" href="https://github.com/ssuoew2898/djy/blob/master/gb/nf3180.md#1">º£Íâºë´«</a> | <a target="_blank" href="https://github.com/ssuoew2898/djy/blob/master/gb/nf5410.md#1">ÍòÈËÉÏ·Ã</a> | <a target="_blank" href="https://github.com/ssuoew2898/ntdtv/blob/master/gb/prog1530_1.md#1">ºÍÆ½¿¹Òé</a> | <a target="_blank" href="https://github.com/ssuoew2898/djy/blob/master/gb/nf4386.md#1">Ö§³Ö</a> | <a target="_blank" href="https://github.com/ssuoew2898/djy/blob/master/gb/nf4389.md#1">ÕæÏà</a> | <a target="_blank" href="https://github.com/ssuoew2898/djy/blob/master/gb/nf5790.md#1">Ê¥Ôµ</a> | <a target="_blank" href="https://github.com/ssuoew2898/djy/blob/master/gb/nf4786.md#1">ÉñÔÏ</a></td></tr>
-<tr><td VALIGN=TOP width="626"><h2 align=center>Ä«¶û±¾³É°ÄÖÞ¹è¹È ¹ú¼ÊÅÅÃû³¬Ï¤Äá</h2>
-<img src="http://i.epochtimes.com/assets/uploads/2019/11/melbourne-966464_1920-600x338-600x338.jpg" />
-<h6>½ñÄê£¬2ThinkNowÄê¶È´´ÐÂ³ÇÊÐÅÅÃû½«Ä«¶û±¾ÁÐÎªµÚ11Î»£¬Ï¤ÄáÅÅÃûµÚ15Î»¡££¨Pixabay£©
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/1.jpg" title="å¤§çºªå…ƒ"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/3.jpg" title="å›½é™…æ–°é—»"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/4.jpg" title="å¤§é™†æ–°é—»"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/5.jpg" title="è¯„è®º"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/6.jpg" title="æ–‡åŒ–"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/7.jpg" title="ç”Ÿæ´»"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/8.jpg" title="å¨±ä¹"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/9.jpg" title="å¥åº·"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/10.jpg" title="è´­ç‰©"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/12.jpg" title="ææ¬¾"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/9p.md#1">ç¤¾è®º</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5657.md#1">ä¸‰é€€</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6124.md#1">è¯‰æ±Ÿ</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176117.md#1">ä¸­å…±å–å›½</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5773.md#1">è´ªè…æ·«ä¹±</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176115.md#1">çªœæ”¹åŽ†å²</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176107.md#1">å…šé­ç”»çš®</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1320400.md#1">ä¸­å…±é—´è°</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176114.md#1">ç ´åä¼ ç»Ÿ</a> | <a target="_blank" href="https://github.com/tjvrql262/ntdtv/blob/master/gb/prog447_1.md#1">æ¶è´¯æ»¡ç›ˆ</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/ncid278.md#1">äººæƒ</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176111.md#1">è¿«å®³</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">æœŸåˆŠ</a> | <a target="_blank" href="https://github.com/tjvrql262/www/blob/master/README.md?zsrh#8">ç¿»å¢™</a></p><p><a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5562.md#1">ä¼ªç«</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4378.md#1">é—®ç­”</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5792.md#1">å‰–æž</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5735.md#1">ä¸¤å²¸æ¯”å¯¹</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6119.md#1">å„å›½è¤’å¥–</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6120.md#1">æ°‘ä¼—å£°æ´</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1188594.md#1">éš¾å¿˜è®°å¿†</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf3180.md#1">æµ·å¤–å¼˜ä¼ </a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5410.md#1">ä¸‡äººä¸Šè®¿</a> | <a target="_blank" href="https://github.com/tjvrql262/ntdtv/blob/master/gb/prog1530_1.md#1">å’Œå¹³æŠ—è®®</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4386.md#1">æ”¯æŒ</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4389.md#1">çœŸç›¸</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5790.md#1">åœ£ç¼˜</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4786.md#1">ç¥žéŸµ</a></td></tr>
+<tr><td VALIGN=TOP width="626"><h2 align=center>å¢¨å°”æœ¬æˆæ¾³æ´²ç¡…è°· å›½é™…æŽ’åè¶…æ‚‰å°¼</h2>
+<img width="600" src="https://i.epochtimes.com/assets/uploads/2019/11/melbourne-966464_1920-600x338-600x338.jpg" />
+<h6>ä»Šå¹´ï¼Œ2ThinkNowå¹´åº¦åˆ›æ–°åŸŽå¸‚æŽ’åå°†å¢¨å°”æœ¬åˆ—ä¸ºç¬¬11ä½ï¼Œæ‚‰å°¼æŽ’åç¬¬15ä½ã€‚ï¼ˆPixabayï¼‰
 </h6>
 <hr>
-<p>¡¾´ó¼ÍÔª2019Äê11ÔÂ13ÈÕÑ¶¡¿£¨´ó¼ÍÔª¼ÇÕßÖ£ìãæÃ<a href="https://github.com/ssuoew2898/djy/blob/master/gb/tag/%E6%BE%B3%E6%B4%B2.md">°ÄÖÞ</a><a href="https://github.com/ssuoew2898/djy/blob/master/gb/tag/%E5%A2%A8%E5%B0%94%E6%9C%AC.md">Ä«¶û±¾</a>±àÒë±¨µ¼£©Ä«¶û±¾ÔÚÒ»¸öÈ«Çò´´ÐÂ³ÇÊÐÅÅÃûÖÐÊ×´Î³¬¹ý<a href="https://github.com/ssuoew2898/djy/blob/master/gb/tag/%E6%82%89%E5%B0%BC.md">Ï¤Äá</a>£¬²¢¼¸ºõÓë<a href="https://github.com/ssuoew2898/djy/blob/master/gb/tag/%E7%A1%85%E8%B0%B7.md">¹è¹È</a>²¢¼ÝÆëÇý¡£</p>
-<p>½ñÄê£¬2ThinkNowÄê¶È´´ÐÂ³ÇÊÐÅÅÃû½«<a href="https://github.com/ssuoew2898/djy/blob/master/gb/tag/%E5%A2%A8%E5%B0%94%E6%9C%AC.md">Ä«¶û±¾</a>ÁÐÎªµÚ11Î»£¬<a href="https://github.com/ssuoew2898/djy/blob/master/gb/tag/%E6%82%89%E5%B0%BC.md">Ï¤Äá</a>ÅÅÃûµÚ15Î»¡£²¼ÀïË¹°àÊ×´Î½øÈëÇ°50Ãû£¬Î»¾ÓµÚ48Î»¡£</p>
-<p>È«ÇòÅÅÃûÇ°10Î»µÄ³ÇÊÐÒÀ´ÎÎª£ºÅ¦Ô¼¡¢¶«¾©¡¢Â×¶Ø¡¢ÂåÉ¼í¶¡¢ÐÂ¼ÓÆÂ¡¢°ÍÀè¡¢Ö¥¼Ó¸ç¡¢²¨Ê¿¶Ù¡¢¾É½ðÉ½/Ê¥ºÉÎ÷£¨<a href="https://github.com/ssuoew2898/djy/blob/master/gb/tag/%E7%A1%85%E8%B0%B7.md">¹è¹È</a>£©ºÍ¶àÂ×¶à¡£</p>
-<p>2ThinkNowÊý¾Ý¹«Ë¾±íÊ¾£¬Ä«¶û±¾ÒÑÌáÉýÁËÆäµØÎ»£¬³ÉÎªÑÇÌ«µØÇøµÄ´´ÐÂÖÐÐÄ¡£</p>
-<p>¡°Ä«¶û±¾µÄÅÅÃûÌá¸ßÊÇÒòÎª£¬Æä½«À´×Ôµ±µØ´´ÐÂ¡¢Ã½ÌåºÍÌåÓýÐÐÒµµÄ´´Òâ×ª±äÎª¹ú¼Ê´óÊÂ¼þµÄÄÜÁ¦ÔöÇ¿¡£¡±</p>
-<p>¡°¼ò¶øÑÔÖ®£¬´Ó<a href="https://github.com/ssuoew2898/djy/blob/master/gb/tag/%E6%BE%B3%E6%B4%B2.md">°ÄÖÞ</a>´ó³ÇÊÐ×ßÏòÈ«ÇòÕýÔÚ±äµÃÔ½À´Ô½ÈÝÒ×£¬¶øÄ«¶û±¾½ñÄêÊÇÇ£Í·Õß¡£¡±</p>
-<p>Ä«¶û±¾µ±µØÊý¼Ò¼ÛÖµ³¬¹ý10ÒÚ°ÄÔªµÄ¹«Ë¾È¡µÃµÄ³É¹¦Ìá¸ßÁË¸Ã³ÇÊÐµÄÉùÓþ£¬ÆäÖÐ°üÀ¨Êý×ÖÃ½Ìå¹«Ë¾REA Group¡¢ÈËÁ¦×ÊÔ´Æ½Ì¨Culture Amp¡¢Èí¼þ¹«Ë¾Aconex¡¢¹ú¼Ê¸¶¿î¹«Ë¾AirwallexºÍÉÌÒµ·þÎñÌá¹©ÉÌMYOB¡£</p>
-<p>Ä«¶û±¾È¥ÄêÔÚ´ËÅÅÃûÖÐÎ»¾ÓµÚ16Î»£¬Ï¤ÄáÅÅµÚ10Î»¡£</p>
-<p>2ThinkNow´´ÐÂ³ÇÊÐÈ«ÇòÖ¸Êý£¨Innovation Cities Global Index£©±¨¸æ½ñÄê½øÈëµÚ12¸öÄêÍ·£¬»ùÓÚ162¸öÖ¸±ê¶ÔÈ«Çò500¸ö³ÇÊÐ½øÐÐÅÅÃû¡£</p>
-<p>Î¬ÖÝÕþ¸®³Æ£¬ÕâÊÇÈ«ÇòÍ¬Àà±¨¸æÖÐÀúÊ·×îÓÆ¾Ã¡¢ÄÚÈÝ×îÈ«ÃæµÄÒ»¸ö¡£</p>
-<p>2ThinkNowÓÚ2006ÄêÔÚÄ«¶û±¾³ÉÁ¢£¬Ä¿Ç°Æä×Ü²¿Î»ÓÚ¸Ã³ÇÊÐ¡£</p>
-<p>ÔðÈÎ±à¼­£ºÀîÐÀÈ»</p>
+<p>ã€å¤§çºªå…ƒ2019å¹´11æœˆ13æ—¥è®¯ã€‘ï¼ˆå¤§çºªå…ƒè®°è€…éƒ‘ç…¦å©·<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E6%BE%B3%E6%B4%B2.md#1">æ¾³æ´²</a><ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E5%A2%A8%E5%B0%94%E6%9C%AC.md#1">å¢¨å°”æœ¬</a>ç¼–è¯‘æŠ¥å¯¼ï¼‰å¢¨å°”æœ¬åœ¨ä¸€ä¸ªå…¨çƒåˆ›æ–°åŸŽå¸‚æŽ’åä¸­é¦–æ¬¡è¶…è¿‡<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E6%82%89%E5%B0%BC.md#1">æ‚‰å°¼</a>ï¼Œå¹¶å‡ ä¹Žä¸Ž<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E7%A1%85%E8%B0%B7.md#1">ç¡…è°·</a>å¹¶é©¾é½é©±ã€‚</p>
+<p>ä»Šå¹´ï¼Œ2ThinkNowå¹´åº¦åˆ›æ–°åŸŽå¸‚æŽ’åå°†<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E5%A2%A8%E5%B0%94%E6%9C%AC.md#1">å¢¨å°”æœ¬</a>åˆ—ä¸ºç¬¬11ä½ï¼Œ<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E6%82%89%E5%B0%BC.md#1">æ‚‰å°¼</a>æŽ’åç¬¬15ä½ã€‚å¸ƒé‡Œæ–¯ç­é¦–æ¬¡è¿›å…¥å‰50åï¼Œä½å±…ç¬¬48ä½ã€‚</p>
+<p>å…¨çƒæŽ’åå‰10ä½çš„åŸŽå¸‚ä¾æ¬¡ä¸ºï¼šçº½çº¦ã€ä¸œäº¬ã€ä¼¦æ•¦ã€æ´›æ‰çŸ¶ã€æ–°åŠ å¡ã€å·´é»Žã€èŠåŠ å“¥ã€æ³¢å£«é¡¿ã€æ—§é‡‘å±±/åœ£è·è¥¿ï¼ˆ<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E7%A1%85%E8%B0%B7.md#1">ç¡…è°·</a>ï¼‰å’Œå¤šä¼¦å¤šã€‚</p>
+<p>2ThinkNowæ•°æ®å…¬å¸è¡¨ç¤ºï¼Œå¢¨å°”æœ¬å·²æå‡äº†å…¶åœ°ä½ï¼Œæˆä¸ºäºšå¤ªåœ°åŒºçš„åˆ›æ–°ä¸­å¿ƒã€‚</p>
+<p>â€œå¢¨å°”æœ¬çš„æŽ’åæé«˜æ˜¯å› ä¸ºï¼Œå…¶å°†æ¥è‡ªå½“åœ°åˆ›æ–°ã€åª’ä½“å’Œä½“è‚²è¡Œä¸šçš„åˆ›æ„è½¬å˜ä¸ºå›½é™…å¤§äº‹ä»¶çš„èƒ½åŠ›å¢žå¼ºã€‚â€</p>
+<p>â€œç®€è€Œè¨€ä¹‹ï¼Œä»Ž<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E6%BE%B3%E6%B4%B2.md#1">æ¾³æ´²</a>å¤§åŸŽå¸‚èµ°å‘å…¨çƒæ­£åœ¨å˜å¾—è¶Šæ¥è¶Šå®¹æ˜“ï¼Œè€Œå¢¨å°”æœ¬ä»Šå¹´æ˜¯ç‰µå¤´è€…ã€‚â€</p>
+<p>å¢¨å°”æœ¬å½“åœ°æ•°å®¶ä»·å€¼è¶…è¿‡10äº¿æ¾³å…ƒçš„å…¬å¸å–å¾—çš„æˆåŠŸæé«˜äº†è¯¥åŸŽå¸‚çš„å£°èª‰ï¼Œå…¶ä¸­åŒ…æ‹¬æ•°å­—åª’ä½“å…¬å¸REA Groupã€äººåŠ›èµ„æºå¹³å°Culture Ampã€è½¯ä»¶å…¬å¸Aconexã€å›½é™…ä»˜æ¬¾å…¬å¸Airwallexå’Œå•†ä¸šæœåŠ¡æä¾›å•†MYOBã€‚</p>
+<p>å¢¨å°”æœ¬åŽ»å¹´åœ¨æ­¤æŽ’åä¸­ä½å±…ç¬¬16ä½ï¼Œæ‚‰å°¼æŽ’ç¬¬10ä½ã€‚</p>
+<p>2ThinkNowåˆ›æ–°åŸŽå¸‚å…¨çƒæŒ‡æ•°ï¼ˆInnovation Cities Global Indexï¼‰æŠ¥å‘Šä»Šå¹´è¿›å…¥ç¬¬12ä¸ªå¹´å¤´ï¼ŒåŸºäºŽ162ä¸ªæŒ‡æ ‡å¯¹å…¨çƒ500ä¸ªåŸŽå¸‚è¿›è¡ŒæŽ’åã€‚</p>
+<p>ç»´å·žæ”¿åºœç§°ï¼Œè¿™æ˜¯å…¨çƒåŒç±»æŠ¥å‘Šä¸­åŽ†å²æœ€æ‚ ä¹…ã€å†…å®¹æœ€å…¨é¢çš„ä¸€ä¸ªã€‚</p>
+<p>2ThinkNowäºŽ2006å¹´åœ¨å¢¨å°”æœ¬æˆç«‹ï¼Œç›®å‰å…¶æ€»éƒ¨ä½äºŽè¯¥åŸŽå¸‚ã€‚</p>
+<p>è´£ä»»ç¼–è¾‘ï¼šæŽæ¬£ç„¶</p>
 
 <hr>
 
-#### ±¾ÎÄ×ª×Ô<a href="http://www.epochtimes.com">´ó¼ÍÔª</a>£¨¹úÄÚÐèÓÃ<a href="https://git.io/JesJV">·­Ç½Èí¼þ</a>²ÅÄÜ·ÃÎÊ£©
-> Ô­ÎÄ£º<a href="http://www.epochtimes.com/gb/19/11/13/n11651738.htm">Ä«¶û±¾³É°ÄÖÞ¹è¹È ¹ú¼ÊÅÅÃû³¬Ï¤Äá</a>
 
-
-#### ÏÂÔØ<a href="https://git.io/JesJV">·­Ç½Èí¼þ</a>ä¯ÀÀ<a href="http://www.epochtimes.com">´ó¼ÍÔª</a>Ïà¹ØÐÂÎÅ£º
-> <li><a href="http://www.epochtimes.com/gb/19/11/11/n11648586.htm">ÃÀ×¤»ª´óÊ¹: »¶Ó­ÖÐ¹úÁôÑ§Éú ÎÞÇø±ð¶Ô´ý</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/31/n11624833.htm">·´ÖÆ¿Æ¼¼¼äµý ÃÀ¹ÙÔ±ÓõÑÏÉóÖÐ¹úÑ§ÉúÇ©Ö¤</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/24/n11608658.htm">¶íÀÕ¸ÔÖÐ¹úÁôÑ§ÉúÕ©Æ­Æ»¹û¹«Ë¾±»ÅÐ3ÄêÐÌ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/16/n11591366.htm">ÖÐ¹úÁôÑ§Éú×ßË½³ö¿ÚÎÚ¹ê»ñÐÌÒ»Äê</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/13/n11584707.htm">Ã³Ò×Õ½ÔÝÍ£»ð Ò»ÎÄ¿´¶®ÃÀÖÐÌ¸ÅÐÊ®ËÄÒªµã</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/12/n11584474.htm">´¨ÆÕ¼ûÁõº× ¾ÍÖÐ¹úÁôÑ§ÉúÌ¸ÁËÄÄÐ©»°</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/8/6/n11433499.htm">ÖÐ¹²ÈçºÎÍ¨¹ýÊ¹Áì¹ÝºÍÎ¢ÐÅ²Ù¿Øº£ÍâÁôÑ§Éú</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/21/n11400375.htm">ÄÚÄ»£ºÖÐ¹²½ÌËôÁôÑ§Éú×ªÒÆ»òµÁÇÔÅ·ÃÀ¼¼Êõ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/16/12/27/n8638128.htm">Ôì³ÉÖÐ¹úÁôÑ§ÉúÑ¹Á¦ºÍ½¹ÂÇµÄ5´óÒòËØ</a></li>
-
-#### ÏÂÔØ<a href="https://git.io/JesJV">·­Ç½Èí¼þ</a>ä¯ÀÀ<a href="http://www.epochtimes.com">´ó¼ÍÔª</a>ÈÈÃÅÐÂÎÅ£º
-> <li><a href="http://www.epochtimes.com/gb/19/11/11/n11646485.htm">¾¯²ìÁ¬¿ªÈýÇ¹Ò»ÈËÖÐµ¯ Ïã¸ÛÈý°Õ·éÑÌËÄÆð</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/11/n11647497.htm">Êµµ¯¿ªÇ¹ÉäÖÐ¿¹ÕùÕßµÄ¾¯²ì¹Ø¼ÒÈÙ±»Æðµ×</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/11/n11646729.htm">¸Û¾¯Ê§¿Ø£¿ÉäÉË2ÇàÄêÆï»ú³µ³å×²¿¹ÒéÈËÈº</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/11/n11647055.htm">¡¾¸üÐÂÖÐ¡¿11.11¸ÛÈËÈý°Õ ¾¯·¢¿ñ È«ÈÕ×·×Ù</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/21/n11602738.htm">¡¾ÃüÀí¡¿ÎªºÎË«°ûÌ¥ÐÖµÜÃüÔË»á²»ÏàÍ¬£¿</a></li>
-> <li><a href="http://www.epochtimes.com/gb/15/4/21/n4416242.htm">Ôã¿·Ö®ÆÞ²»ÏÂÌÃ ¹ÅÈËÊÓ»éÒöÎªÈËÂ×Ö®±¾</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/31/n11625562.htm">¡¾²Å×Ó¼ÑÈË¡¿½èººÈËÉí·Ý¼ÞÇ¬Â¡ÔøËïµÄÂúÇå²ÅÅ®</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/30/n11623041.htm">¡¾ÀúÊ·»Øíø¡¿ÀúÊ·ÑéÖ¤ÁËÇ®ÄÂ¶ÔÖÐ¹²µÄÔ¤ÑÔ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/10/n11646181.htm">³öÌÓÐÌ¾¯¶Ó³¤Ö¤Êµ ÖÐ¹²ÌØ¾¯ÔÚ¸ÛÊµÊ©ÕòÑ¹</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/10/n11645886.htm">ÂíÔÆÔÙÌ¸ºó»Ú´´°¢Àï°Í°Í »òÊÂ³öÓÐÒò</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/8/n11641005.htm">¡¾Ö±²¥»Ø·Å¡¿11.10¸ÛÈËÔÙµ¿ÖÜè÷ÀÖ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/8/n11642658.htm">¡¾ÐÂÎÅ¿´µã¡¿±±¾©Ò»ÏáÇéÔ¸ ÖÐÃÀ³õ²½Ð­ÒéÐüÁË£¿</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/11/n11648791.htm">¡¾ÐÂÎÅ¿´µã¡¿¸ÛÈËÈý°Õ ¸Û¾¯·è¿ñ¿ªÇ¹ÓÖ×²ÈË</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/11/n11646672.htm">¡¾Ê®×ÖÂ·¿Ú¡¿º«¹úè¤Ïñ´¨ÆÕ£¿Îå´ó²îÒìËµÇå³þ(ÏÂ)</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/10/n11646097.htm">»ÆÏþÃ÷Ê×¶È»ØÓ¦»é±ä´«ÎÅ ÕâÒ»´ÎÖÕÓÚÕæÏà´ó°×</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/10/n11645023.htm">µ±º«¹úÏ±ÈýÄê ÌìÐÄÊ×ÆØº«·çÌðÃÛ»éÕÕ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/9/n11644225.htm">¡¶¾öÕ½ÖÐÍ¾µº¡·Ó°ÆÀ£º¶þÕ½¾­µäÕ½ÒÛ¾«²Ê»¹Ô­£¡</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/9/n11644322.htm">MomoÉúÈÕÇ××Ô×öµ°¸â ÓëÄÈçö×Óè¤Ì¸TWICEÒþÓÇ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/10/n11645222.htm">ºÅÕÙÈºÑÝÅÜÂíÀ­ËÉ ·½ÎÄÁÕ£ºÒ²Îª°ûµÜÒÅÔ¸¶øÅÜ</a></li>
+<strong>ç›¸å…³æ–°é—»ï¼š</strong>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/19/10/22/n11603477.md#1">å¢¨å°”æœ¬å“ªé‡Œæœ€å®œå±…æˆ¿ä»·æœ€å…·è´Ÿæ‹…æ€§</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/19/10/25/n11610007.md#1">2019å¹´é€€ä¼‘é‡‘åˆ¶åº¦å…¨çƒæŽ’å åŠ æ‹¿å¤§ç¬¬9</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/19/10/18/n11596377.md#1">ç€æ–¯å½“é€‰ä¸ºæ¾³æ´²æœ€å‹å¥½åŸŽå¸‚</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/19/10/15/n11588686.md#1">å¢¨å°”æœ¬å±…æ°‘åŒºçŽ°è¶Šæ¥è¶Šå¤šAirbnbå‡ºç§Ÿæˆ¿</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/19/10/14/n11586640.md#1">è°ƒæŸ¥ï¼š18å²ä»¥ä¸Šæ¾³äººä¸‰åˆ†ä¹‹äºŒè‚¥èƒ–æˆ–è¿‡é‡</a></li>
 <hr>
 
-#### ÊÖ»úÉÏ³¤°´²¢¸´ÖÆÏÂÃæ¶þÎ¬Âë·ÖÏí±¾ÎÄÕÂ£º<br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/ssuoew2898/djy/blob/master/gb/19/11/13/n11651738.md%231" title="·ÖÏí±¾ÎÄÕÂ"></td><td VALIGN=TOP><a href="https://github.com/ssuoew2898/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/wei-f1.jpg" title="ÖÐ¹²µÄÎ±»ðÆ­¾Ö"  alt="ÖÐ¹²µÄÎ±»ðÆ­¾Ö"></a><br><a href="https://github.com/ssuoew2898/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/yong-h.jpg" title="ÓÀºãµÄ¼ûÖ¤"  alt="ÓÀºãµÄ¼ûÖ¤"></a><br><a href="https://github.com/ssuoew2898/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/shang-lnz.jpg" title="ÉÆÁ¼Å®×Ó±»ÖÐ¹²Í¶ÄÐÀÎ"  alt="ÉÆÁ¼Å®×Ó±»ÖÐ¹²Í¶ÄÐÀÎ"></a><br><a href="https://github.com/ssuoew2898/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/huo-z3.jpg" title="¾¯ÎÀÄ¿»÷»îÕªÆ÷¹Ù"  alt="¾¯ÎÀÄ¿»÷»îÕªÆ÷¹Ù"></a><br><a href="https://github.com/ssuoew2898/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/huo-z4.jpg" title="Ö¤ÈËÃèÊö»îÕª¿Ö²À"  alt="Ö¤ÈËÃèÊö»îÕª¿Ö²À"></a><br><a href="https://github.com/ssuoew2898/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/huo-z1.jpg" title="½Ò¿ª»îÕªÆ÷¹ÙºÚÄ»"  alt="½Ò¿ª»îÕªÆ÷¹ÙºÚÄ»"></a><br><a href="https://github.com/ssuoew2898/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/ma-ks.jpg" title="Âí¿ËË¼µÄ³ÉÄ§Ö®Â·"  alt="Âí¿ËË¼µÄ³ÉÄ§Ö®Â·"></a><br><a href="https://github.com/ssuoew2898/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/chang-zs.jpg" title="²Ø×ÖÊ¯ ÔÌÌì»ú"  alt="²Ø×ÖÊ¯ ÔÌÌì»ú"></a><br><a href="https://github.com/ssuoew2898/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/st1.jpg" title="¹Ø×¢3ÒÚÈËÈýÍË"  alt="¹Ø×¢3ÒÚÈËÈýÍË"></a><br><a href="https://github.com/ssuoew2898/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/jie-t.jpg" title="½âÌåÖÐ¹²¸´ÐËÖÐ»ª"  alt="½âÌåÖÐ¹²¸´ÐËÖÐ»ª"></a><br><a href="https://github.com/ssuoew2898/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/gao-zs.jpg" title="ÖÐ¹²ÆÈº¦Á¼ÐÄÂÉÊ¦"  alt="ÖÐ¹²ÆÈº¦Á¼ÐÄÂÉÊ¦"></a><br><a href="https://github.com/ssuoew2898/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/sj1.jpg" title="303ÍòÈË¾Ù±¨½­ÔóÃñ"  alt="303ÍòÈË¾Ù±¨½­ÔóÃñ"></a><br><a href="https://github.com/ssuoew2898/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/sj2.jpg" title="ÕâÐ©¹ÙÔ±ÎªºÎÆðËß½­ÔóÃñ"  alt="ÕâÐ©¹ÙÔ±ÎªºÎÆðËß½­ÔóÃñ"></a><br><a href="https://github.com/ssuoew2898/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/liangan.jpg" title="º£Ï¿Á½°¶µÄÇ¿ÁÒ¶Ô±È"  alt="º£Ï¿Á½°¶µÄÇ¿ÁÒ¶Ô±È"></a><br><a href="https://github.com/ssuoew2898/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/jia-ndzl.jpg" title="¼ÓÄÃ´ó×ÜÀíµÄºØÐÅ"  alt="¼ÓÄÃ´ó×ÜÀíµÄºØÐÅ"></a><br><a href="https://github.com/ssuoew2898/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/xiao-wd.jpg" title="Ì½Ñ°ÕæÏà¼æÌýÔòÃ÷"  alt="Ì½Ñ°ÕæÏà¼æÌýÔòÃ÷"></a><br><a href="https://github.com/ssuoew2898/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/yindu.jpg" title="Ó¡¶ÈÃ½Ìå±¨µÀ¶«·½"  alt="Ó¡¶ÈÃ½Ìå±¨µÀ¶«·½"></a><br><a href="https://github.com/ssuoew2898/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/xie-j.jpg" title="²»Ò»ÑùµÄº£ÍâÐ£Ô°"  alt="²»Ò»ÑùµÄº£ÍâÐ£Ô°"></a><br><a href="https://github.com/ssuoew2898/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/li-up.jpg" title="´Ó´óÊ¦µ½Í½µÜµÄ´«Ææ"  alt="´Ó´óÊ¦µ½Í½µÜµÄ´«Ææ"></a><br><a href="https://github.com/ssuoew2898/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/zfl2.jpg" title="ÒÚÍòÈËÓë¶«·½Ò»±¾ÆæÊé"  alt="ÒÚÍòÈËÓë¶«·½Ò»±¾ÆæÊé"></a><br><a href="https://github.com/ssuoew2898/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/zhen-h.jpg" title="´óÂ½¼û²»µ½µÄÕðº³³¡Ãæ"  alt="´óÂ½¼û²»µ½µÄÕðº³³¡Ãæ"></a><br><a href="https://github.com/ssuoew2898/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/dalu-sk.jpg" title="ÈËÐÄÏòÉÆ ´óÂ½µ±³õÊ¢¿ö"  alt="ÈËÐÄÏòÉÆ ´óÂ½µ±³õÊ¢¿ö"></a><br><a href="https://github.com/ssuoew2898/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/zfl1.jpg" title="×·Ñ°ÕæÀí ÕâÊé½²Ê²Ã´"  alt="×·Ñ°ÕæÀí ÕâÊé½²Ê²Ã´"></a><br><a href="https://github.com/ssuoew2898/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/fq1.jpg" title="ÏÂÔØÃâ·Ñ·­Ç½Èí¼þ"  alt="ÏÂÔØÃâ·Ñ·­Ç½Èí¼þ"></a><br></td></tr></table>
+
+<strong>ç¼–è¾‘æŽ¨èï¼š</strong>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/19/9/28/n11553140.md#1">æ°‘ä¸»å…šå‘èµ·å¼¹åŠ¾æ€»ç»Ÿè°ƒæŸ¥ ç¾Žå›½å†œæ°‘æ€Žä¹ˆçœ‹</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/10/29/n9783517.md#1" target="_blank">æž—è¾‰ï¼šåˆšæ­£ä¸é˜¿åŒ…é’å¤©  ä¸­å…±æ­ªæ‰¹å…¶è™šä¼ª</a></li><li><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank">è­¦å«ç›®å‡»æ´»æ‘˜å™¨å®˜</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/13/n11256153.md#1" target="_blank">ç•™å®ˆå¥³å­©çš„å‘½è¿è½¬å˜</a></li>
+<hr>
+
+<strong>çƒ­é—¨æ–°é—»ï¼š</strong>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/16/n11943071.md#1">ã€çŽ°åœºè§†é¢‘ã€‘æ­¦æ±‰åŒ»ç”Ÿæ­ä¸­å…±å…³é—­æ–¹èˆ±å†…å¹•</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11942593.md#1">ã€ç–«æƒ…é€è§†ã€‘æ¸¯æŠ—ç–«æ˜¾å¥‡è¿¹ å¤©ç­ä¸­å…±æˆä¿å‘½ç¬¦</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/16/n11943372.md#1">â€œå›žå›½é¿ç–«â€å’Œâ€œä¸­å›½å¼æ’¤ä¾¨â€çš„çœŸç›¸</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11942860.md#1">ã€æœ€æ–°ç–«æƒ…3.16ã€‘æ—§é‡‘å±±åœ°åŒº700ä¸‡äººå±…å®¶é˜²ç–«</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/18/n11877949.md#1">å¤ä»Šä¸­å¤–é¢„è¨€ä¸­çš„2020å¹´</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/29/n11905232.md#1">è—è™«ç¾¤æ”»å®˜åºœå¼‚è±¡ ä¸ºä½•åƒå°½ç”»åƒäººå¤´ï¼Ÿ</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/9/n11925830.md#1">è¢«æ‰’çš®çš„æ³•å®˜</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/28/n11903572.md#1">æœ«ä»£å›½å›çš„é£ŽèŒƒ é¡ºä»Žå¤©æ„çš„å…ƒæƒ å®—</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11942373.md#1">å›¾è¯è—è™«å¤§å†›è‚†è™ ä¸­å…±æ€¥å®šé¢„æ¡ˆæéš¾åº”å¯¹</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/14/n11940769.md#1">ã€æ–°é—»çœ‹ç‚¹ã€‘ç—…æ¯’æ¥è‡ªå“ªé‡Œï¼Ÿå·æ™®ï¼šä¸­ç¾Žéƒ½çŸ¥é“</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/14/n11941017.md#1">ã€çŽ°åœºè§†é¢‘ã€‘ä¸œèŽžè™Žé—¨é•‡çŽ°å¤§é‡é˜²æš´è­¦å¯Ÿ</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/16/n11945355.md#1">ç–«æƒ…å½±å“æ— æ³•å¼€ä¸š å±±ä¸œå•†æˆ·åå‡ç§Ÿé­æš´åŠ›æŠ“æ•</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/16/n11945531.md#1">æ­¦æ±‰äººæ–¥å®˜å‘˜ï¼šç»™ä½ æ”¹æ­£æœºä¼š è°ç»™æˆ‘æ´»å‘½æœºä¼š</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11941189.md#1">ã€ä¸€çº¿é‡‡è®¿è§†é¢‘ç‰ˆã€‘æ­¦æ±‰å¸‚æ°‘ï¼šé¦–å…ˆè¦æ´»ä¸‹æ¥</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11942589.md#1">èµµç«‹åšç”©é”…ç—…æ¯’æºè‡ªç¾Žå›½ è‰ºäººé»„ç§‹ç”Ÿç‹ é…¸ä¸­å…±</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11942781.md#1">æ½˜è¿Žç´«å‘¼å¸é“æ„ŸæŸ“æ€¥å°±åŒ» è¢«è¦æ±‚æ£€æµ‹æ–°å† ç—…æ¯’</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11942415.md#1">è¥¿ç­ç‰™ç–«æƒ…å¤§çˆ†å‘ æ¢å’çªä¸€å®¶ä¸‰å£å°åŸŽå‰è¿”æ¸¯</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/16/n11943288.md#1">å¤å·¨åŸºå®£å¸ƒå½“çˆ¸ æ™’å®å®åˆç…§åˆ†äº«å–œæ‚¦</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/16/n11943213.md#1">åˆä¸€å¥½èŽ±åžæ˜Žæ˜Ÿç¡®è¯Š 007é‚¦å¥³éƒŽéš”ç¦»åœ¨å®¶</a></li>
+<hr>
+
+<strong>æœ¬æ–‡è½¬è‡ª<a href="https://www.epochtimes.com">å¤§çºªå…ƒ</a>ï¼ˆå›½å†…éœ€ç”¨<a href="https://github.com/tjvrql262/www/blob/master/README.md#8">ç¿»å¢™è½¯ä»¶</a>æ‰èƒ½è®¿é—®ï¼‰</strong><p>ä¸‹è½½<a href="https://github.com/tjvrql262/www/blob/master/README.md#8">ç¿»å¢™è½¯ä»¶</a>æµè§ˆåŽŸæ–‡ï¼š<a href="https://www.epochtimes.com/gb/19/11/13/n11651738.htm">å¢¨å°”æœ¬æˆæ¾³æ´²ç¡…è°· å›½é™…æŽ’åè¶…æ‚‰å°¼</a></p><hr>
+
+<strong>æ‰‹æœºä¸Šé•¿æŒ‰å¹¶å¤åˆ¶ä¸‹é¢äºŒç»´ç åˆ†äº«æœ¬æ–‡ç« ï¼š</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/tjvrql262/djy/blob/master/gb/19/11/13/n11651738.md%231" title="åˆ†äº«æœ¬æ–‡ç« "></td><td VALIGN=TOP><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/wei-f1.jpg" title="ä¸­å…±çš„ä¼ªç«éª—å±€"  alt="ä¸­å…±çš„ä¼ªç«éª—å±€"></a><br><a href="https://github.com/tjvrql262/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/yong-h.jpg" title="æ°¸æ’çš„è§è¯"  alt="æ°¸æ’çš„è§è¯"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/shang-lnz.jpg" title="å–„è‰¯å¥³å­è¢«ä¸­å…±æŠ•ç”·ç‰¢"  alt="å–„è‰¯å¥³å­è¢«ä¸­å…±æŠ•ç”·ç‰¢"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z3.jpg" title="è­¦å«ç›®å‡»æ´»æ‘˜å™¨å®˜"  alt="è­¦å«ç›®å‡»æ´»æ‘˜å™¨å®˜"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z4.jpg" title="è¯äººæè¿°æ´»æ‘˜ææ€–"  alt="è¯äººæè¿°æ´»æ‘˜ææ€–"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z1.jpg" title="æ­å¼€æ´»æ‘˜å™¨å®˜é»‘å¹•"  alt="æ­å¼€æ´»æ‘˜å™¨å®˜é»‘å¹•"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/ma-ks.jpg" title="é©¬å…‹æ€çš„æˆé­”ä¹‹è·¯"  alt="é©¬å…‹æ€çš„æˆé­”ä¹‹è·¯"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/chang-zs.jpg" title="è—å­—çŸ³ è•´å¤©æœº"  alt="è—å­—çŸ³ è•´å¤©æœº"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/st1.jpg" title="å…³æ³¨3äº¿äººä¸‰é€€"  alt="å…³æ³¨3äº¿äººä¸‰é€€"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/jie-t.jpg" title="è§£ä½“ä¸­å…±å¤å…´ä¸­åŽ"  alt="è§£ä½“ä¸­å…±å¤å…´ä¸­åŽ"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/gao-zs.jpg" title="ä¸­å…±è¿«å®³è‰¯å¿ƒå¾‹å¸ˆ"  alt="ä¸­å…±è¿«å®³è‰¯å¿ƒå¾‹å¸ˆ"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/sj1.jpg" title="303ä¸‡äººä¸¾æŠ¥æ±Ÿæ³½æ°‘"  alt="303ä¸‡äººä¸¾æŠ¥æ±Ÿæ³½æ°‘"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/sj2.jpg" title="è¿™äº›å®˜å‘˜ä¸ºä½•èµ·è¯‰æ±Ÿæ³½æ°‘"  alt="è¿™äº›å®˜å‘˜ä¸ºä½•èµ·è¯‰æ±Ÿæ³½æ°‘"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/liangan.jpg" title="æµ·å³¡ä¸¤å²¸çš„å¼ºçƒˆå¯¹æ¯”"  alt="æµ·å³¡ä¸¤å²¸çš„å¼ºçƒˆå¯¹æ¯”"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/jia-ndzl.jpg" title="åŠ æ‹¿å¤§æ€»ç†çš„è´ºä¿¡"  alt="åŠ æ‹¿å¤§æ€»ç†çš„è´ºä¿¡"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/xiao-wd.jpg" title="æŽ¢å¯»çœŸç›¸å…¼å¬åˆ™æ˜Ž"  alt="æŽ¢å¯»çœŸç›¸å…¼å¬åˆ™æ˜Ž"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/yindu.jpg" title="å°åº¦åª’ä½“æŠ¥é“ä¸œæ–¹"  alt="å°åº¦åª’ä½“æŠ¥é“ä¸œæ–¹"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/xie-j.jpg" title="ä¸ä¸€æ ·çš„æµ·å¤–æ ¡å›­"  alt="ä¸ä¸€æ ·çš„æµ·å¤–æ ¡å›­"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/li-up.jpg" title="ä»Žå¤§å¸ˆåˆ°å¾’å¼Ÿçš„ä¼ å¥‡"  alt="ä»Žå¤§å¸ˆåˆ°å¾’å¼Ÿçš„ä¼ å¥‡"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zfl2.jpg" title="äº¿ä¸‡äººä¸Žä¸œæ–¹ä¸€æœ¬å¥‡ä¹¦"  alt="äº¿ä¸‡äººä¸Žä¸œæ–¹ä¸€æœ¬å¥‡ä¹¦"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zhen-h.jpg" title="å¤§é™†è§ä¸åˆ°çš„éœ‡æ’¼åœºé¢"  alt="å¤§é™†è§ä¸åˆ°çš„éœ‡æ’¼åœºé¢"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/dalu-sk.jpg" title="äººå¿ƒå‘å–„ å¤§é™†å½“åˆç››å†µ"  alt="äººå¿ƒå‘å–„ å¤§é™†å½“åˆç››å†µ"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zfl1.jpg" title="è¿½å¯»çœŸç† è¿™ä¹¦è®²ä»€ä¹ˆ"  alt="è¿½å¯»çœŸç† è¿™ä¹¦è®²ä»€ä¹ˆ"></a><br><a href="https://github.com/tjvrql262/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/fq1.jpg" title="ä¸‹è½½å…è´¹ç¿»å¢™è½¯ä»¶"  alt="ä¸‹è½½å…è´¹ç¿»å¢™è½¯ä»¶"></a><br></td></tr></table>
